<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.testprojectcrud.MainActivity">

    <EditText
        android:id="@+id/myText"
        android:text="@string/title_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_saveId"
        android:text="@string/lbl_save_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_readId"
        android:text="@string/lbl_read_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_deleteId"
        android:text="@string/lbl_delete_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_updateId"
        android:text="@string/lbl_update_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
